2009-10-13  vadim  <vadim@vk.crocodile.org>

	* VERSION (VERSION): started v3.0.8

2009-09-18  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler.cpp (ItfNegation::processNext): fix for bug
	#2710034 "PF Compiler in 3.0.3 Unprotected Interface Bug". When we
	expand "interface" rule element which uses negation, skip
	unprotected interfaces.

2009-08-28  vadim  <vadim@vk.crocodile.org>

	* Interface.cpp (Interface::getOptionsObjectConst): Added
	Interface::getOptionsObjectconst(), Interface::isSlave()

2009-08-24  vadim  <vadim@vk.crocodile.org>

	* Compiler_cluster.cpp (Compiler::processFailoverGroup): cluster
	interface may not need an ip address, but this depends on the
	failover protocol. Adding check for when the address is missing.
	See #337

2009-08-12  vadim  <vadim@vk.crocodile.org>

	* NATCompiler.cpp (classifyNATRule::processNext): fixed bug
	#2836321: "SNAT rule that changes Trans Src and Trans Port does
	not work". Dual translation rule that changes source address and
	destination port was not supported.

2009-08-03  vadim  <vadim@vk.crocodile.org>

	* Compiler.cpp (Compiler::_expandInterface): See #284:
	PolicyCompiler::ExpandMultipleAddresses and
	NATCompiler::ExpandMultipleAddresses should include subinterfaces

2009-08-02  vadim  <vadim@vk.crocodile.org>

	* Interface.cpp (Interface::validateChild): DTD does not allow
	nested subinterfaces; only one level of subinterfaces is supported.
	Interface::validateChild() now checks for this condition.

2009-07-29  vadim  <vadim@vk.crocodile.org>

	* snmp.h (class SNMPCrawler): Removed obsolete parameter
	skip_virtual - we never ignore virtual addresses.

2009-07-28  vadim  <vadim@vk.crocodile.org>

	* Compiler_cluster.cpp (Compiler::populateClusterElements): while
	scanning interfaces-members of a failover group, use only those
	that are children of the firewall that we are compiling. fixes
	#242 "fwb_ipt generates duplicate automatic rules for heartbeat
	and other protocols"
