@@ -451,6 +451,13 @@ Interface can have the following attributes:
  tagcode %STRING;  #REQUIRED
 >
 
+<!--     
+See definition of IP options here: http://www.iana.org/assignments/ip-parameters
+
+router-alert option is defined in RFC2113. This option carries 16 bit value
+although only value "0" is defined at this time, all other values are
+reserved. Used in RSVP and IGMP2 protocols.
+-->
 <!ELEMENT IPService EMPTY>
 <!ATTLIST IPService
  %STD_ATTRIBUTES;
@@ -463,6 +470,8 @@ Interface can have the following attributes:
  ts           %BOOLEAN; #IMPLIED
  tos          %STRING;  #IMPLIED
  dscp         %STRING;  #IMPLIED
+ rtralt       %BOOLEAN; #IMPLIED
+ rtralt_value %NUMBER; #IMPLIED
 >
 
 <!ELEMENT TCPService EMPTY>
