@@ -63,6 +63,8 @@ class IPService : public Service
     std::string getDSCPCode() const;
     void setDSCPCode(const std::string &c);
 
+    bool hasIpOptions();
+    
     static void addNamedProtocol(int proto_num, const std::string &proto_name);
 };
 
